--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,7 +3,15 @@
     position: relative;
     width: 340px;
     height: 340px;
+}
+
+.cardMask {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .cardImg {
@@ -14,7 +22,9 @@
     top: 0;
     z-index: -1;
     position: absolute;
+    z-index: 1;
 }
+
 .cardText {
     position: absolute;
     left: 20px;
@@ -22,4 +32,5 @@
     bottom: 20px;
     margin: 0;
     color: white;
+    z-index: 2;
 }
