--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
     justify-content: flex-end;
     background-color: black;
     color: white;
-    width: 100%;
+    width: 100vw;
     gap: 30px;
     padding: 60px 0 30px 0;
 }
