--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
 /* reset css */
 @import-normalize;
+/* import montserrat font */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 /* global styling file */
 body {
     margin: 0;
+    color: #FF6060;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 * {
