--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,7 +1,13 @@
 .main {
-    margin: 0 auto;
-    padding: 0 100px;
     max-width: 1440px;
+    margin: auto;
+}
+
+.main > div {
+    max-width: 1240px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (max-width: 480px) {
