--- a/src/components/ErrorPage/ErrorPage.module.css
+++ b/src/components/ErrorPage/ErrorPage.module.css
@@ -1,5 +1,5 @@
 /* import 700 weight for 404 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 .error {
     display: flex;
@@ -27,4 +27,4 @@
     color: #FF6060;
     font-size: 18px;
     margin-bottom: 159px;
-}
+} */
