--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,6 +26,7 @@
     padding-left: 0;
     justify-content: space-between;
     min-width: 200px;
+    gap: 10px;
 }
 
 .Header li {
@@ -52,6 +53,12 @@
     max-width: fit-content;
 }
 
+@media (max-width: 768px) {
+    .Header a {
+        font-size: 1.25em;
+    }
+}
+
 @media (max-width:480px) {
 
     .Header > div {
@@ -59,7 +66,6 @@
     }
     
     .Header ul {
-        gap: 10px;
         text-transform: uppercase;
         min-width: 140px;
     }
