--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,7 @@
 .card {
     border-radius: 10px;
     position: relative;
-    width: 340px;
-    height: 340px;
+    aspect-ratio: 1;
 }
 
 .cardMask {
@@ -16,11 +15,10 @@
 
 .cardImg {
     object-fit: cover;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     border-radius: 10px;
     top: 0;
-    z-index: -1;
     position: absolute;
     z-index: 1;
 }
@@ -33,4 +31,13 @@
     margin: 0;
     color: white;
     z-index: 2;
+    font-size: 18px;
+}
+
+@media (max-width: 768px) {
+
+    .card {
+        aspect-ratio: 1.35;
+    }
+
 }
