Corrections d'erreurs introduites durant l'ajout du responsive - remis la clef sur le lien - Changé class en className pour le style du lien - formatage des fichiers

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -55,7 +55,7 @@
     }
 }
 
-@media (max-width: 480px ) {
+@media (max-width: 480px) {
 
     .banner {
         height: 111px;
@@ -65,7 +65,8 @@
         font-size: 24px;
     }
 
-    .bannerMask, .bannerImg {
+    .bannerMask,
+    .bannerImg {
         border-radius: 10px;
     }
 }
