--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -3,12 +3,11 @@
     margin: auto;
 }
 
-.main > div {
+.main>div {
     max-width: 1240px;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
 
-@media (max-width: 480px) {
-}
+@media (max-width: 480px) {}
