--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .banner {
     position: relative;
     width: 100%;
-    height: 223px;
+    height: 100%;
     border-radius: 25px;
     display: flex;
     align-items: center;
