Reset des weight des polices des titres Ajout du responsive et de l'interactivité des accordéons Ajout du responsive de l'enveloppe des accordéons, page à-propos Utilisations de classes plutôt que d'éléments sur la page d'erreur

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -14,8 +14,18 @@
     height: 233px;
 }
 
+@media (max-width: 768px) {
+    .accordionWrapper {
+        width: 85%;
+    }
+}
+
 @media (max-width: 480px) {
     .aboutPage {
         margin-top: 1em;
+    }
+
+    .accordionWrapper {
+        width: 100%;
     }
 }
