--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 /* reset css */
 @import-normalize;
+
+/* reset default weight of heading ... */
+h1, h2, h3, h4, h5, h6 {
+    font-weight: unset;
+}
+
 /* import montserrat font */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
@@ -7,8 +13,8 @@
 body {
     margin: 0;
     color: #FF6060;
-    font-weight: 500;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 
 * {
