--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -4,7 +4,8 @@
 
 .accordionWrapper {
     margin: 2em auto;
-    width: 70%;
+    max-width: 1023px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 2em;
@@ -16,7 +17,7 @@
 
 @media (max-width: 768px) {
     .accordionWrapper {
-        width: 85%;
+        gap: 26px;
     }
 }
 
@@ -26,6 +27,6 @@
     }
 
     .accordionWrapper {
-        width: 100%;
+        gap: 20px;
     }
 }
