--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -24,7 +24,9 @@
 }
 
 .arrow {
-    transform: rotate(180deg)
+    transform: rotate(180deg);
+    width: 29px;
+    height: 29px;
 }
 
 .content {
@@ -51,13 +53,23 @@
     .content {
         font-size: 18px;
     }
+    .arrow {
+        width: 24px;
+        height: 24px;
+    }
 }
 
 @media (max-width: 480px) {
     .title {
-        font-size: 13px
+        font-size: 13px;
+        padding: 6px 6px 6px 12px;
     }
     .content {
         font-size: 12px;
+        padding: 23px 7px 50px 12px;
+    }
+    .arrow {
+        width: 18px;
+        height: 18px;
     }
 }
