--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -1,6 +1,11 @@
 /* import correct weight for accordion content */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
 .button {
     font-size: 24px;
     border: none;
@@ -9,6 +14,7 @@
     display: block;
     cursor: pointer;
     width: 100%;
+    flex-grow: 0;
 }
 
 .title {
@@ -34,12 +40,18 @@
     background: #F7F7F7;
     color: #FF6060;
     margin: 0;
+    min-height: 117px;
     padding: 36px 27px 19px 18px;
     text-align: left;
     font-family: 'Montserrat';
     font-weight: 400;
     position: relative;
-    top: -9px;
+    top: -10px;
+    flex-grow: 1;
+}
+
+.content > p {
+    margin: 0;
 }
 
 .collapsed.arrow{
@@ -66,7 +78,10 @@
     }
     .content {
         font-size: 12px;
-        padding: 23px 7px 50px 12px;
+        min-height: 143px;
+        padding-top: 23px;
+        padding-left: 12px;
+        padding: 23px 7px 0px 12px;
     }
     .arrow {
         width: 18px;
