--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -24,6 +24,7 @@
 
 .bannerText {
     font-size: 48px;
+    line-height: 142.6%;
     margin: 0;
     color: white;
     z-index: 1;
@@ -48,6 +49,7 @@
 @media (max-width: 768px) {
     .bannerText {
         font-size: 32px;
+        line-height: 142.6%;
     }
 }
 
@@ -55,6 +57,7 @@
 
     .bannerText {
         font-size: 24px;
+        line-height: 142.6%;
     }
 
     .bannerMask,
