--- a/src/components/Slideshow/Slideshow.module.css
+++ b/src/components/Slideshow/Slideshow.module.css
@@ -55,6 +55,7 @@
     left: 0;
     right: 0;
     font-size: 18px;
+    line-height: 142.6%;
     text-align: center;
     color: white;
 }
@@ -65,6 +66,12 @@
         height: 335px;
         margin-top: 23px;
     }
+    .controls {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    
     .indicator {
         display: none;
     }
@@ -86,6 +93,7 @@
     .wrapper {
         height: 255px;
         margin-top: 27px;
+        border-radius: 10px;
     }
 
     .arrow {
