--- a/src/components/Tag/Tag.module.css
+++ b/src/components/Tag/Tag.module.css
@@ -2,6 +2,7 @@
     background-color: #FF6060;
     color: white;
     font-size: 14px;
+    line-height: 142.6%;
     border-radius: 10px;
     min-width: 115px;
     height: 25px;
@@ -16,6 +17,7 @@
         min-width: 84px;
         height: 18px;
         font-size: 10px;
+        line-height: 142.6%;
         border-radius: 5px;
     }
 }
