--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -61,7 +61,7 @@
 
 @media (max-width: 768px) {
     .title {
-        font-size: 20px
+        font-size: 20px;
         line-height: 142.6%;
     }
     .content {
