--- a/src/components/Slideshow/Slideshow.module.css
+++ b/src/components/Slideshow/Slideshow.module.css
@@ -15,6 +15,16 @@
     position: absolute;
 }
 
+.animation {
+    animation: 0.5s linear pulse
+}
+
+@keyframes pulse {
+    from { transform: scale3d(1, 1, 1); }
+    50% { transform: scale3d(1.1, 1.1, 1.1)}
+    to { transform: translateX(1, 1, 1); }
+}
+
 .next, .previous {
     position: absolute;
     bottom: 0;
