--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -20,7 +20,7 @@
     cursor: pointer;
     width: 100%;
     flex-grow: 0;
-    z-index:1;
+    z-index: 1;
 }
 
 .title {
@@ -38,17 +38,29 @@
 .animation {
     animation: 0.25s linear slideDown;
 }
+
 .animationReverse {
     animation: 0.25s linear slideUp;
 }
 
 @keyframes slideDown {
-    from {transform: translateY(-66%) scaleY(0)}
-    to {transform: translateY(0) scaleY(1)}
+    from {
+        transform: translateY(-66%) scaleY(0)
+    }
+
+    to {
+        transform: translateY(0) scaleY(1)
+    }
 }
+
 @keyframes slideUp {
-    from {transform: translateY(0) scaleY(1);}
-    to {transform: translateY(-66%) scaleY(0);}
+    from {
+        transform: translateY(0) scaleY(1);
+    }
+
+    to {
+        transform: translateY(-66%) scaleY(0);
+    }
 }
 
 .arrow {
@@ -72,11 +84,11 @@
     flex-grow: 1;
 }
 
-.content > p {
+.content>p {
     margin: 0;
 }
 
-.collapsed.arrow{
+.collapsed.arrow {
     transform: unset;
 }
 
@@ -85,10 +97,12 @@
         font-size: 20px;
         line-height: 142.6%;
     }
+
     .content {
         font-size: 18px;
         line-height: 142.6%;
     }
+
     .arrow {
         width: 24px;
         height: 24px;
@@ -101,6 +115,7 @@
         line-height: 142.6%;
         padding: 6px 6px 6px 12px;
     }
+
     .content {
         font-size: 12px;
         line-height: 142.6%;
@@ -109,6 +124,7 @@
         padding-left: 12px;
         padding: 23px 7px 0px 12px;
     }
+
     .arrow {
         width: 18px;
         height: 18px;
