--- a/src/components/Slideshow/Slideshow.module.css
+++ b/src/components/Slideshow/Slideshow.module.css
@@ -20,12 +20,21 @@
 }
 
 @keyframes pulse {
-    from { transform: scale3d(1, 1, 1); }
-    50% { transform: scale3d(1.1, 1.1, 1.1)}
-    to { transform: translateX(1, 1, 1); }
+    from {
+        transform: scale3d(1, 1, 1);
+    }
+
+    50% {
+        transform: scale3d(1.1, 1.1, 1.1)
+    }
+
+    to {
+        transform: translateX(1, 1, 1);
+    }
 }
 
-.next, .previous {
+.next,
+.previous {
     position: absolute;
     bottom: 0;
     top: 0;
@@ -76,12 +85,13 @@
         height: 335px;
         margin-top: 23px;
     }
+
     .controls {
         width: 100%;
         height: 100%;
         position: absolute;
     }
-    
+
     .indicator {
         display: none;
     }
@@ -92,7 +102,8 @@
         padding: 5px 15px 17px 15px;
     }
 
-    .next, .previous {
+    .next,
+    .previous {
         width: 15%;
     }
 
@@ -112,7 +123,8 @@
         padding: 2px 6px 2px 6px;
     }
 
-    .next, .previous {
+    .next,
+    .previous {
         width: 20%;
     }
 }
