--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
     border-radius: 10px;
     position: relative;
-    aspect-ratio: 1;
+    aspect-ratio: 1 / 1;
 }
 
 .cardMask {
@@ -38,7 +38,7 @@
 @media (max-width: 768px) {
 
     .card {
-        aspect-ratio: 1.35;
+        aspect-ratio: 1.35 / 1;
     }
 
 }
