--- a/src/components/Logement/Logement.module.css
+++ b/src/components/Logement/Logement.module.css
@@ -102,7 +102,7 @@
     line-height: 142.6%;
 }
 
-.accordionsWrapper>div>button>div>div {
+.accordionsWrapper>div>button>span>span {
     font-size: 18px;
     line-height: 142.6%;
 }
@@ -230,7 +230,7 @@
         line-height: 142.6%;
     }
 
-    .accordionsWrapper>div>button>div>div {
+    .accordionsWrapper>div>button>span>span {
         font-size: 13px;
         line-height: 142.6%;
     }
